# enpm640_pneumatic_muscle_actuation

./: .gitignore  README.md
docs/report/: report.tex
pma_control/: CMakeLists.txt  README.md  package.xml  pma_control_plugin.xml
pma_control/include/pma_control/trajectory_control/: pmap_trajectory_controller.hpp  sliding_mode_2dof_pressure_trajectory_controller.hpp
pma_control/include/pma_control/trajectory_util/: pma_trajectory_types.hpp  pmap_trajectory.hpp
pma_control/src/trajectory_control/: pmap_trajectory_controller.cpp  sliding_mode_2dof_pressure_trajectory_controller.cpp
pma_control/src/trajectory_util/: joint_pressure_trajectory.cpp  pmap_trajectory.cpp
pma_description/: .setup_assistant  CMakeLists.txt  README.md  package.xml
pma_description/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  pma_planar_2dof.ros2_control.xacro  pma_planar_2dof.srdf  pma_planar_2dof.urdf.xacro  ros2_controllers.yaml
pma_description/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
pma_description/urdf/: pma_planar_2dof.urdf
pma_hardware/: CMakeLists.txt  README.md  package.xml  pma_hardware_plugin.xml
pma_hardware/include/pma_hardware/description/: individual_pneumatic_muscle_configuration.hpp  individual_pneumatic_muscle_telemetry.hpp  pneumatic_muscle_control_configuration.hpp  pneumatic_muscle_segment_configuration.hpp  pneumatic_muscle_segment_telemetry.hpp
pma_hardware/include/pma_hardware/interface/: pma_planar_2dof_interface.hpp  pma_robot.hpp
pma_hardware/include/pma_hardware/math_utils/: compute_pma_robot_model_properties.hpp
pma_hardware/include/pma_hardware/types/: hardware_interface_type_values.hpp
pma_hardware/src/interface/: pma_planar_2dof_interface.cpp  pma_robot.cpp
pma_interfaces/: CMakeLists.txt  README.md  package.xml
pma_interfaces/msg/: LabelledJointTrajectory.msg  LabelledPmaRobotTrajectoryPoint.msg  PmaRobotTrajectoryPoint.msg
pma_util/: CMakeLists.txt  README.md  package.xml
pma_util/include/pma_util/: pma_trajectory_types.hpp  util.hpp
