<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>pma_hardware</name>
    <version>0.0.0</version>
    <description>Pneumatic muscle actuation (PMA) hardware utilities.</description>
    <maintainer email="rnvandemark@gmail.com">R. Nick Vandemark</maintainer>
    <license>Apache-2.0</license>
    <author email="rnvandemark@gmail.com">R. Nick Vandemark</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>pluginlib</build_depend>
    <exec_depend>pluginlib</exec_depend>

    <depend>controller_interface</depend>
    <depend>hardware_interface</depend>
    <depend>pma_util</depend>
    <depend>rclcpp</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
