<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>pma_interfaces</name>
    <version>0.0.0</version>
    <description>Interfaces for pneumatic muscle actuator (PMA) robot control.</description>
    <maintainer email="rnvandemark@gmail.com">R. Nick Vandemark</maintainer>
    <license>BSD</license>
    <author email="rnvandemark@gmail.com">R. Nick Vandemark</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>trajectory_msgs</build_depend>
    <build_depend>rosidl_default_generators</build_depend>

    <exec_depend>trajectory_msgs</exec_depend>
    <exec_depend>rosidl_default_generators</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
